backend/txt/backend_test_fail_utf8.txt
node.exe : FAIL tests/day11_live_status.test.js
At line:1 char:1
+ & "C:\New Folder/node.exe" 
"C:\Users\ASUS\AppData\Roaming\npm/node_mo ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~
    + CategoryInfo          : NotSpecified: (FAIL tests/day11_live_ 
   status.test.js:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
  ΓùÅ Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code 
or its dependencies use non-standard JavaScript syntax, or when 
Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to 
transform your files into valid JS based on your Babel 
configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     ΓÇó If you are trying to use ECMAScript Modules, see 
https://jestjs.io/docs/ecmascript-modules for how to enable it.
     ΓÇó If you are trying to use TypeScript, see 
https://jestjs.io/docs/getting-started#using-typescript
     ΓÇó To have some of your "node_modules" files transformed, you 
can specify a custom "transformIgnorePatterns" in your config.
     ΓÇó If you need a custom transformation specify a "transform" 
option in your config.
     ΓÇó If you simply want to mock your non-JS modules (e.g. 
binary assets) you can stub them out with the "moduleNameMapper" 
config option.

    You'll find more details and examples of these config options 
in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    C:\Users\ASUS\OneDrive\Desktop\SDGP-Project\backend\tests\day11_
live_status.test.js:17
    import { describe, it, expect, beforeAll, jest } from 
'@jest/globals';
    ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      at Runtime.createScriptFromCode 
(node_modules/jest-runtime/build/index.js:1505:14)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        0.364 s, estimated 6 s
Ran all test suites matching /tests\\day11_live_status.test.js/i.
